fix servicesnavbar alignment

--- a/client/src/style.less
+++ b/client/src/style.less
@@ -146,7 +146,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 80px 0;
+  padding: 50px 0;
 }
 
 .service-page-container {
@@ -155,7 +155,7 @@
 
 @media (max-width:1000px) {
   .services {
-    padding: 60px 0;
+    padding: 50px 0;
   }
 }
 
